Small css changed to fix popover alignment issue
Jira Issue DD-1392

Sync to source repo @f4515c4502b979102bae4a644267420f961931fc

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -48,7 +48,6 @@ div.dtsp-topRow button.dtsp-searchIcon {
 
 div.dt-button-collection {
   top: 40px !important;
-  left: 0px !important;
   z-index: 2002;
 }
 
@@ -144,6 +143,14 @@ div.dtsp-columns-9 {
 }
 div.dtsp-columns-9 div.dtsp-topRow {
   flex-direction: column !important;
+}
+
+div.dt-button-collection {
+  float: none;
+}
+
+div.dtsp-panesContainer {
+  width: 100%;
 }
 
 div.dtsp-searchPanes {
